fixed stockage body width on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -157,7 +157,6 @@ body {
   clear: both;
   padding-top: 1px;
   overflow: hidden;
-  margin-bottom: 1.5em;
   background-repeat: no-repeat;
   background-position: center;
 }
