--- a/app/assets/stylesheets/partials/stockpage-graph.css.scss
+++ b/app/assets/stylesheets/partials/stockpage-graph.css.scss
@@ -1,17 +1,5 @@
 
 
-.blue-blur {
-	background-image: url("../img/blue-blur33.png");
-	background-size: cover;
-	max-width: 100%;
-	clear: both;
-	padding-top: 1px;
-	overflow: hidden;
-	margin-bottom: 1.5em;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
 .stockpage-graph-stats-col {
 	display: none;
 }
@@ -124,7 +112,7 @@
 
 .graph-mobile-open-prediction {
 	overflow: hidden;
-	margin-top: 15px;
+	margin-top: 20px;
 	padding-top: 18px;
 	padding-bottom: 20px;
 	border-top: solid 1px rgba(255, 255, 255, 0.2);
@@ -136,7 +124,7 @@
 
 .graph-mobile-open-prediction-figure {
 	color: rgba(255, 255, 255, 0.85);
-	margin-bottom: 0px;
+	margin-bottom: 5px;
 	font-weight: 300;
 	font-size: 21px;
 }
@@ -200,11 +188,6 @@
 
 
 /*************** STOCKPAGE FULL WIDTH ***********************/
-
-
-.stockpage-body {
-	padding-right: 15px;
-}
 
 
 
