--- a/app/assets/stylesheets/stocks.css.scss
+++ b/app/assets/stylesheets/stocks.css.scss
@@ -10,12 +10,22 @@
   display: none;
 }
 
+.stockpage-body {
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
+
 @media (min-width: 480px) {
 
 
 }
 
 @media (min-width: 768px) {
+
+.stockpage-body {
+	padding-right: 30px;
+}
 
 .stockpage-sidebar {
   display: block;
